--- a/product-service-local.yml
+++ b/product-service-local.yml
@@ -1,26 +1,21 @@
 spring:
-	application:
-		name: produc-microservice
-		
+  application:
+    name: product-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/db_springboot_cloud
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+
 server:
-	port: ${PORT:0}
+  port: ${PORT:0}
 
 eureka:
-	instance:
-		instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${random.value}
-		
-spring:
-	datasource:
-		url: jdbc:mysql://localhost:3306/db_springboot_cloud
-		username: root
-		password: root
-		driver-class-name: com.mysql.cj.jdbc.Driver
-		
-	jpa:
-		hibernate:
-			ddl-auto: update
-	
-eureka:
-	client: 
-		service-url:
-			defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${random.value}
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
